--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "morgan": "^1.10.0",
     "mssql": "^9.1.1",
     "tedious": "^15.1.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20"
   }
 }
